# Snake

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Obstacles.cpp  Obstacles.h  README.md  Segment.cpp  Segment.h  Snake.cpp  Snake.h  main.cpp
Google_tests/: CMakeLists.txt  SegmentFoodTests.cpp  SnakeTests.cpp  test1.cpp
Google_tests/lib/googletest-master/googlemock/docs/: for_dummies.md
